add vanity group

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -123,6 +123,13 @@ light:
   - light.bathroom_light_2
   - light.bathroom_light_3
   - light.bathroom_light_4
+- platform: group
+  name: Vanity
+  entities:
+  - light.bathroom_light_1
+  - light.bathroom_light_2
+  - light.bathroom_light_3
+  - light.bathroom_light_4
 
 automation: !include automations.yaml
 script: !include scripts.yaml
