--- a/automations.yaml
+++ b/automations.yaml
@@ -135,6 +135,10 @@
   - service: light.turn_off
     data:
       entity_id: light.all_lights
+  - service: light.turn_on
+    data:
+      entity_id: light.bathroom_bulb_4
+      brightness: 30
 
 - alias: Andrew wakes up
   trigger:
