--- a/automations.yaml
+++ b/automations.yaml
@@ -395,4 +395,4 @@
     data:
       brightness: "{{ [state_attr('light.lounge_lamp','brightness'),20]|min}}"
   - service: light.turn_off
-    entity_id: light.cans
+    entity_id: light.spot
