--- a/configuration.yaml
+++ b/configuration.yaml
@@ -231,10 +231,9 @@ scene:
 ifttt:
   key: bD9EVd6gCvWCIw9JEUoZk7
 
-vacuum:
-  - platform: roomba
-    host: 192.168.1.9
-    username: 3175000031817670
+roomba:
+  - host: 192.168.1.9
+    blid: 3175000031817670
     password: ":1:1575845387:taEElBRsoG0VTOHW"
 
 weather:
