--- a/sensors.yaml
+++ b/sensors.yaml
@@ -86,3 +86,9 @@
       value_template: >
         {{ states.sun.sun.attributes.elevation}}
       unit_of_measurement: s
+
+- platform: template
+  sensors:
+    ac_setting:
+      friendly_name: AC Setting
+      value_template: "{{ state_attr('ac_mode', 'value') }}"
