--- a/configuration.yaml
+++ b/configuration.yaml
@@ -58,57 +58,65 @@ switch:
           {{ is_state('input_select.ac_mode', 'Off') }}
         turn_on:
           - service: input_select.select_option
-            entity_id: input_select.ac_mode
-            option: "Off"
+            data:
+              entity_id: input_select.ac_mode
+              option: "Off"
       ac_fan:
         value_template: >
           {{ is_state('input_select.ac_mode', 'Fan') }}
         turn_on:
           - service: input_select.select_option
-            entity_id: input_select.ac_mode
-            option: "Fan"
+            data:
+              entity_id: input_select.ac_mode
+              option: "Fan"
       ac_cool:
         value_template: >
           {{ is_state('input_select.ac_mode', 'Cool') }}
         turn_on:
           - service: input_select.select_option
-            entity_id: input_select.ac_mode
-            option: "Cool"
+            data:
+              entity_id: input_select.ac_mode
+              option: "Cool"
       ac_eco:
         value_template: >
           {{ is_state('input_select.ac_mode', 'Eco') }}
         turn_on:
           - service: input_select.select_option
-            entity_id: input_select.ac_mode
-            option: "Eco"
+            data:
+              entity_id: input_select.ac_mode
+              option: "Eco"
       ac_auto:
         value_template: >
           {{ is_state('input_select.ac_fan', 'Auto') }}
         turn_on:
           - service: input_select.select_option
-            entity_id: input_select.ac_fan
-            option: "Auto"
+            data:
+              entity_id: input_select.ac_fan
+              option: "Auto"
       ac_low:
         value_template: >
           {{ is_state('input_select.ac_fan', 'Low') }}
         turn_on:
           - service: input_select.select_option
-            entity_id: input_select.ac_fan
-            option: "Low"
+            data:
+              entity_id: input_select.ac_fan
+              option: "Low"
       ac_medium:
         value_template: >
           {{ is_state('input_select.ac_fan', 'Medium') }}
         turn_on:
           - service: input_select.select_option
-            entity_id: input_select.ac_fan
-            option: "Medium"
+            data:
+              entity_id: input_select.ac_fan
+              option: "Medium"
       ac_high:
         value_template: >
           {{ is_state('input_select.ac_fan', 'High') }}
         turn_on:
           - service: input_select.select_option
-            entity_id: input_select.ac_fan
-            option: "High"
+            data:
+              entity_id: input_select.ac_fan
+              option: "High"
 
 # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
 # http:
