--- a/sensors.yaml
+++ b/sensors.yaml
@@ -99,3 +99,13 @@
         {% else %}
         {{ states.input_select.ac_mode.state }}-{{ states.input_select.ac_fan.state }}-{{ states.input_number.ac_temp.state|int }}
         {% endif %}
+    ac_mode:
+      friendly_name: AC Mode
+      value_template: {{ states.input_select.ac_mode.state }}
+    ac_mode:
+      friendly_name: AC Fan
+      value_template: {{ states.input_select.ac_fan.state }}
+    ac_temp:
+      friendly_name: AC Temp
+      value_template: {{ states.input_number.ac_temp.state }}
+      unit_of_measurement: Metric
