--- a/configuration.yaml
+++ b/configuration.yaml
@@ -64,6 +64,62 @@ switch:
           - service: automation.trigger
             data:
               entity_id: automation.ac_off
+      ac_fan:
+        friendly_name: AC Fan Mode
+        value_template: >
+          {{ not is_state('input_select.ac_mode', 'Fan') }}
+        turn_on:
+          - service: automation.trigger
+            data:
+              entity_id: automation.ac_fan
+      ac_cool:
+        friendly_name: AC Cool Mode
+        value_template: >
+          {{ not is_state('input_select.ac_mode', 'Cool') }}
+        turn_on:
+          - service: automation.trigger
+            data:
+              entity_id: automation.ac_cool
+      ac_eco:
+        friendly_name: AC Eco Mode
+        value_template: >
+          {{ not is_state('input_select.ac_mode', 'Eco') }}
+        turn_on:
+          - service: automation.trigger
+            data:
+              entity_id: automation.ac_eco
+      ac_fan_low:
+        friendly_name: AC Fan Low
+        value_template: >
+          {{ not is_state('input_select.ac_fan', 'Low') }}
+        turn_on:
+          - service: automation.trigger
+            data:
+              entity_id: automation.set_ac_fan_low
+      ac_fan_medium:
+        friendly_name: AC Fan Medium
+        value_template: >
+          {{ not is_state('input_select.ac_fan', 'Medium') }}
+        turn_on:
+          - service: automation.trigger
+            data:
+              entity_id: automation.set_ac_fan_medium
+      ac_fan_high:
+        friendly_name: AC Fan High
+        value_template: >
+          {{ not is_state('input_select.ac_fan', 'High') }}
+        turn_on:
+          - service: automation.trigger
+            data:
+              entity_id: automation.set_ac_fan_high
+      ac_fan_auto:
+        friendly_name: AC Fan Auto
+        value_template: >
+          {{ not is_state('input_select.ac_fan', 'Auto') }}
+        turn_on:
+          - service: automation.trigger
+            data:
+              entity_id: automation.set_ac_fan_auto
 
 # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
 # http:
