--- a/sensors.yaml
+++ b/sensors.yaml
@@ -93,11 +93,11 @@
       friendly_name: AC Setting
       value_template: >-
         {% if is_state('input_select.ac_mode', "Fan") %}
-        Fan-Only
+        Fan-{{states('input_select.ac_fan')}}
         {% elif is_state('input_select.ac_mode', "Off") %}
         Off
         {% else %}
-        {{ states.input_select.ac_mode.state }}-{{ states.input_select.ac_fan.state }}-{{ states.input_number.ac_temp.state|int }}
+        {{ states('input_select.ac_mode') }}-{{ states('input_select.ac_fan') }}-{{ states('input_number.ac_temp')|int }}
         {% endif %}
     ac_mode:
       friendly_name: AC Mode
