--- a/configuration.yaml
+++ b/configuration.yaml
@@ -67,7 +67,7 @@ switch:
       ac_fan:
         friendly_name: AC Fan Mode
         value_template: >
-          {{ not is_state('input_select.ac_mode', 'Fan') }}
+          {{ is_state('input_select.ac_mode', 'Fan') }}
         turn_on:
           - service: automation.trigger
             data:
@@ -79,7 +79,7 @@ switch:
       ac_cool:
         friendly_name: AC Cool Mode
         value_template: >
-          {{ not is_state('input_select.ac_mode', 'Cool') }}
+          {{ is_state('input_select.ac_mode', 'Cool') }}
         turn_on:
           - service: automation.trigger
             data:
@@ -91,7 +91,7 @@ switch:
       ac_eco:
         friendly_name: AC Eco Mode
         value_template: >
-          {{ not is_state('input_select.ac_mode', 'Eco') }}
+          {{ is_state('input_select.ac_mode', 'Eco') }}
         turn_on:
           - service: automation.trigger
             data:
@@ -103,7 +103,7 @@ switch:
       ac_fan_low:
         friendly_name: AC Fan Low
         value_template: >
-          {{ not is_state('input_select.ac_fan', 'Low') }}
+          {{ is_state('input_select.ac_fan', 'Low') }}
         turn_on:
           - service: automation.trigger
             data:
@@ -115,7 +115,7 @@ switch:
       ac_fan_medium:
         friendly_name: AC Fan Medium
         value_template: >
-          {{ not is_state('input_select.ac_fan', 'Medium') }}
+          {{ is_state('input_select.ac_fan', 'Medium') }}
         turn_on:
           - service: automation.trigger
             data:
@@ -127,7 +127,7 @@ switch:
       ac_fan_high:
         friendly_name: AC Fan High
         value_template: >
-          {{ not is_state('input_select.ac_fan', 'High') }}
+          {{ is_state('input_select.ac_fan', 'High') }}
         turn_on:
           - service: automation.trigger
             data:
@@ -139,7 +139,7 @@ switch:
       ac_fan_auto:
         friendly_name: AC Fan Auto
         value_template: >
-          {{ not is_state('input_select.ac_fan', 'Auto') }}
+          {{ is_state('input_select.ac_fan', 'Auto') }}
         turn_on:
           - service: automation.trigger
             data:
